--- a/配置.md
+++ b/配置.md
@@ -29,12 +29,31 @@ reg add "HKCU\Software\Classes\CLSID\{86ca1aa0-34aa-4e8b-a509-50c905bae2a2}\Inpr
 控制面板 -> 用户账户 -> 更改用户账户控制设置
 ```
 
-# NodeJS 配置
+# 开发配置
 
 ```shell
 npm install -g cnpm --registry=https://registry.npm.taobao.org  > 安装 cnpm
 npm install                                                     > 创建 node_modules
 npm run start                                                   > 启动项目命令
+
+# 安装 Python
+官网 2.7.7 版本
+
+# 安装 NodeJS
+官网 14.21.3 版本
+
+# 安装 Sass 注：需要和 NodeJS 版本匹配，否则抛错
+npm install node-sass@4.14.1 --save-dev
+npm install sass-loader@7.3.1 --save-dev
+
+# 安装 TypeScript
+npm install -g typescript
+
+# 安装 postcss-px2rem插件
+npm i postcss-px2rem --save -dev
+
+# 安装 pdf 插件
+npm install --save vue-pdf
 ```
 
 # 静态服务器
@@ -44,7 +63,7 @@ npm install anywhere -g  > 安装静态服务器
 anywhere                > 运行项目
 ```
 
-# Termius
+# Shell
 
 ```shell
 # 部署项目
